charts/2_addons/humio/templates/000-humio-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: humio-logging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
