charts/2_addons/humio/templates/300-fluentbit.yaml
---
# Source: humio-helm-charts/charts/humio-fluentbit/templates/fluent-bit-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: humio-fluentbit-fluentbit
  namespace: humio-logging
  annotations:
    argocd.argoproj.io/sync-wave: "300"
  labels:
    k8s-app: humio-fluentbit
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    matchLabels:
      k8s-app: humio-fluentbit
  template:
    metadata:
      labels:
        k8s-app: humio-fluentbit
        version: v1
        kubernetes.io/cluster-service: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2020"
        prometheus.io/path: /api/v1/metrics/prometheus
    spec:
      containers:
      - name: humio-fluentbit
        image: fluent/fluent-bit:1.6.10
        command: ["/fluent-bit/bin/fluent-bit", "-c", "/fluent-bit/etc/fluent-bit.conf", "-H"]
        securityContext:
          privileged: true
        livenessProbe:
          httpGet:
            path: /api/v1/metrics
            port: 2020
        imagePullPolicy: Always
        ports:
          - containerPort: 2020
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: config
          mountPath: /fluent-bit/etc/
        resources:
          limits:
            cpu: 256m
            memory: 500Mi
          requests:
            cpu: 128m
            memory: 256Mi
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: config
        configMap:
          name: humio-fluentbit-fluent-bit-config
      serviceAccountName: humio-fluentbit-fluentbit-read
