charts/2_addons/humio/templates/100-humio-operator.yaml
---
# Source: humio-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'humio-operator'
  namespace: 'humio-logging'
  annotations:
    argocd.argoproj.io/sync-wave: "100"
  labels:
    app: 'humio'
    app.kubernetes.io/name: 'humio-operator'
    app.kubernetes.io/instance: 'humio-operator'
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: 'humio'
    app.kubernetes.io/name: 'humio-operator'
    app.kubernetes.io/instance: 'humio-operator'
---
# Source: humio-operator/templates/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humio-operator
  namespace: 'humio-logging'
  annotations:
    argocd.argoproj.io/sync-wave: "100" 
    productID: "none"
    productName: "humio-operator"
    productVersion: "0.13.0"
  labels:
    app: 'humio'
    app.kubernetes.io/name: 'humio-operator'
    app.kubernetes.io/instance: 'humio-operator'
    app.kubernetes.io/managed-by: 'Helm'
    helm.sh/chart: 'humio-operator-0.13.0'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: 'humio'
      app.kubernetes.io/name: 'humio-operator'
      app.kubernetes.io/instance: 'humio-operator'
  template:
    metadata:
      annotations:
        productID: "none"
        productName: "humio-operator"
        productVersion: "0.13.0"
      labels:
        app: 'humio'
        app.kubernetes.io/name: 'humio-operator'
        app.kubernetes.io/instance: 'humio-operator'
        app.kubernetes.io/managed-by: 'Helm'
        helm.sh/chart: 'humio-operator-0.13.0'
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      serviceAccountName: humio-operator
      containers:
      - name: humio-operator
        image: humio/humio-operator:0.13.0
        imagePullPolicy: IfNotPresent
        command:
        - /manager
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
            scheme: HTTP
          timeoutSeconds: 40
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 30
        resources:
          limits:
            cpu: 250m
            memory: 500Mi
          requests:
            cpu: 250m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
