charts/2_addons/humio/templates/200-humio-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: humio
  namespace: humio-logging
  annotations:
    argocd.argoproj.io/sync-wave: "200"
spec:
  to:
    kind: Service
    name: humiocluster
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
